# Koi

./: CMakeLists.txt  README.md  cmake_uninstall.cmake.in
Development/Building/Distributions/Arch_Linux+Manjaro/: PKGBUILD  README.md
Development/Building/Distributions/Debian.12+Ubuntu.22.04-/debian/: control
Development/Building/Distributions/Debian.13+KDE_Neon+Ubuntu.24.10+/: README.md
Development/Building/Distributions/Debian.13+KDE_Neon+Ubuntu.24.10+/debian/: changelog  control
Development/Building/Distributions/Fedora+Mageia+SUSE/: README.md  koi.changes  koi.spec
Development/Building/Distributions/Guix_GNU\Linux/: README.md  kde-plasma.scm.desktop
Development/Building/Distributions/NixOS/: default.nix
Development/Configuration/Samples/: koirc.sample
src/: koi.desktop
src/plugins/: colorscheme.cpp  gtk.cpp  icons.cpp  kvantumstyle.cpp  plasmastyle.cpp
src/ui/: about.ui  mainwindow.ui
